2006-05-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython.el: fix the py-pdbtrack-input-prompt variable so that
	python-mode recognizes our debugger mode.

	* IPython/Debugger.py (Pdb.format_stack_entry): fix formatting of
	tracebacks when walking the stack so that the stack tracking system
	in emacs' python-mode can identify the frames correctly.

	* IPython/ipmaker.py (make_IPython): make the internal (and
	default config) autoedit_syntax value false by default.  Too many
	users have complained to me (both on and off-list) about problems
	with this option being on by default, so I'm making it default to
	off.  It can still be enabled by anyone via the usual mechanisms.

	* IPython/completer.py (Completer.attr_matches): add support for
	PyCrust-style _getAttributeNames magic method.  Patch contributed
	by <mscott-AT-goldenspud.com>.  Closes #50.

	* IPython/iplib.py (InteractiveShell.__init__): remove the
	deletion of exit/quit from __builtin__, which can break
	third-party tools like the Zope debugging console.  The
	%exit/%quit magics remain.  In general, it's probably a good idea
	not to delete anything from __builtin__, since we never know what
	that will break.  In any case, python now (for 2.5) will support
	'real' exit/quit, so this issue is moot.  Closes #55.

	* IPython/genutils.py (with_obj): rename the 'with' function to
	'withobj' to avoid incompatibilities with Python 2.5, where 'with'
	becomes a language keyword.  Closes #53.

	* IPython/FakeModule.py (FakeModule.__init__): add a proper
	__file__ attribute to this so it fools more things into thinking
	it is a real module.  Closes #59.

	* IPython/Magic.py (magic_edit): add -n option to open the editor
	at a specific line number.  After a patch by Stefan van der Walt.

2006-05-23  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (edit_syntax_error): fix crash when for some
	reason the file could not be opened.  After automatic crash