@@ -1,7 +1,11 @@
 2006-05-24  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* ipython.el: fix the py-pdbtrack-input-prompt variable so that
-	python-mode recognizes our debugger mode.
+	python-mode recognizes our debugger mode.  Add support for
+	autoindent inside (X)emacs.  After a patch sent in by Jin Liu
+	<m.liu.jin-AT-gmail.com> originally written by
+	doxgen-AT-newsmth.net (with minor modifications for xemacs
+	compatibility)
 
 	* IPython/Debugger.py (Pdb.format_stack_entry): fix formatting of
 	tracebacks when walking the stack so that the stack tracking system
